fix: mobile slider in grid, modal z-index

--- a/src/shared/components/pages/catalog/productCard/productCard/productCard.module.scss
+++ b/src/shared/components/pages/catalog/productCard/productCard/productCard.module.scss
@@ -6,7 +6,7 @@
 
 .photo {
   grid-area: 1 / 1 / 2 / 2;
-
+  min-width: 0
 }
 
 .info {
